<resources>
    <string name="app_name">The MagicWall</string>

    <string name="deleted_user">Deleted User</string>
    <string name="wrote_in_wall">wrote in the MagicWall:</string>
    <string name="on">on</string>

    <string name="create_new_post">Oh! MagicWall I want to tell you&#8230;</string>
    <string name="content">Content</string>
    <string name="say_to_wall">Say to the wall!</string>

    <string name="login_to_wall">Login to the MAGIC Wall!!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_wall_user">Join the (very) exclusive MagicWall</string>
    <string name="email">Email</string>
    <string name="create_user">Create User</string>
    <string name="please_log_in">Please log in</string>
    <string name="wrong_password">Wrong Username/Password</string>
    <string name="logout">Logout</string>

    <string name="an_error_occurred">An error occurred: %1$s</string>
</resources>
